kateviewinternal: accept surrogate category character

This is added to QInputControl::isAcceptableInput in
https://github.com/qt/qtbase/commit/e688b99995b8c624dbcea296c99fb89262d29e15.

BUG: 482864